Mon Feb 13 15:41:21 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint_exec.cpp
        
          Fixed a warning about "deprecated conversion from string 
          constant to `char*' on RHEL_Static_GCC-3.4.2 build.

Mon Feb 13 11:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint_exec.h:
          Removed not allowed semicolon

Mon Feb 13 09:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint_exec.h:
          Fixed compile error in single threaded builds

Mon Feb 13 08:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Server_init.cpp:
        * tests/Bug_2130_Regression/SEC_CheckPoint/controller.cpp:
        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint_exec.cpp:
          Fixed conversion warnings

Sat Feb 11 21:39:54 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_Direct/CIAO_DirectEvent.h
        * ciaosvcs/Events/CIAO_Direct/CIAO_DirectEvent_Factory.h

          Fixed fuzz build erros.

Sat Feb 11 21:26:08 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * tests/Bug_2130_Regression/descriptors/run_test.pl

          Fixed the command line option to start the NodeApplication
          to enable real-time support.
          Thanks Roland Schimmack <Roland.Schimmack @ gmx.de> for
          reporting this error.

Sat Feb 11 21:00:00 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * ciao/Server_init.cpp

          Removed an extra explicit qualification

Sat Feb 11 18:49:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events.mpc
        * ciaosvcs/Events/CIAO_Direct/CIAO_DirectEvent.mpc
          Removed these files to get at least our builds running again

Fri Feb 10 16:11:35 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
