@@ -19,7 +19,8 @@ namespace CIAO
     const char *ior_file_name_ = "executionManager.ior";
     const char *init_file_name = "deployment.dat";
 
-    bool register_with_ns_ = 0;
+    static bool register_with_ns_ = false;
+    static bool write_to_ior_ = false;
 
     bool
     parse_args (int argc, char *argv[])
@@ -30,13 +31,14 @@ namespace CIAO
         switch (c)
           {
           case 'o':
+            write_to_ior_ = true;
             ior_file_name_ = get_opts.opt_arg ();
             break;
           case 'i':
             init_file_name = get_opts.opt_arg ();
             break;
           case 'n':
-            register_with_ns_ = 1;
+            register_with_ns_ = true;
             break;
           case '?':  // display help for use of the server.
           default:
@@ -94,12 +96,11 @@ namespace CIAO
         CosNaming::NamingContext::_narrow (naming_context_object.in ());
 
       // Initialize the Naming Sequence
-      CosNaming::Name name (2);
-      name.length (2);
+      CosNaming::Name name (1);
+      name.length (1);
 
       // String dup required for MSVC6
-      name[0].id = CORBA::string_dup ("CIAO");
-      name[1].id = CORBA::string_dup ("ExecutionManager");
+      name[0].id = CORBA::string_dup ("ExecutionManager");
 
       // Register the servant with the Naming Service
       naming_context->bind (name,
@@ -173,7 +174,8 @@ namespace CIAO
                                   ACE_ENV_ARG_PARAMETER);
               ACE_TRY_CHECK;
             }
-          else
+          
+          if (write_to_ior_)
             {
               retval =
                 write_ior_file (orb.in (),
